--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   </div>
 </div>
 <div id="btn-more" class="d-grid gap-2 col-3 mx-auto">
-  <button class="btn btn-primary" hx-get="/usability.html" hx-target="#usability-result" hx-swap="innerHTML">시작</button>
+  <button class="btn btn-primary" hx-get="usability.html" hx-target="#usability-result" hx-swap="innerHTML">시작</button>
 </div>
 <div id="usability-result">
 </div>
