Change templates dir

--- a/web/templates/layouts/default.html
+++ b/web/templates/layouts/default.html
@@ -28,7 +28,7 @@
           <a class="nav-link" aria-current="page" href="/">홈</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/usability.html">사용성</a>
+          <a class="nav-link" href="/usability">사용성</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/wearability">착용성</a>
