--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,7 +4,7 @@
  <img src="https://i.imgur.com/nYA6oUS.png" width=100>
   <h1 class="display-5 fw-bold">사용성 평가</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">웨어러블 로봇의 사용성 평가</p>
+    <p class="lead mb-4">웨어러블 디바이스의 사용성 평가</p>
   </div>
 </div>
 <div id="btn-more" class="d-grid gap-2 col-3 mx-auto">
