--- a/web/templates/usability.html
+++ b/web/templates/usability.html
@@ -2,5 +2,5 @@
 <h4>Learnability: <span>{{learnability}}</span></h4>
 <h4>Memorability: <span>{{memorability}}</span></h4>
 <h4>Efficiency: <span>{{efficiency}}</span></h4>
-<h4>Performance Time: <span>{{performance-time}}</span></h4>
-<h4>Error: <pre>{{error-value}}</pre></h4>
+<h4>Effectiveness: <span>{{effectiveness}}</span></h4>
+<h4>Cognitive Process: <pre>{{error-value}}</pre></h4>
