--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -1,17 +1,89 @@
 {% extends "layouts/default.html" %}
 {% block content %}
-<div class="px-4 py-2 my-2 text-center">
- <img src="https://i.imgur.com/nYA6oUS.png" width=100>
-  <h1 class="display-5 fw-bold">사용성 평가</h1>
-  <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">웨어러블 디바이스의 사용성 평가</p>
+<div>
+  <div class="md:flex">
+<div>
+  <h3 class="text-base font-semibold leading-6 text-gray-900">평가 정보</h3>
+
+  <dl class="mt-5 grid grid-cols-1 gap-5 sm:grid-cols-2 lg:grid-cols-3">
+    <div class="relative overflow-hidden rounded-lg bg-white px-4 pb-12 pt-5 shadow sm:px-6 sm:pt-6">
+      <dt class="truncate text-sm font-medium text-gray-500">사람 ID</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">{{body}}</dd>
+      <div class="ml-16 flex items-baseline pb-6 sm:pb-7">
+        <div class="absolute inset-x-0 bottom-0 bg-gray-50 px-4 py-4 sm:px-6">
+          <div class="text-sm">
+            <a href="#information" hx-get="information?body={{body}}" hx-target="#more-information" hx-swap="innerHTML" 
+              class="font-medium text-indigo-600 hover:text-indigo-500"> 자세히 보기<span class="sr-only"> </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="relative overflow-hidden rounded-lg bg-white px-4 pb-12 pt-5 shadow sm:px-6 sm:pt-6">
+      <dt class="truncate text-sm font-medium text-gray-500">웨어러블 디바이스</dt>
+    {% if device == 'upper' %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">상지</dd>
+    {% else %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">하지</dd>
+    {% endif %}
+      <div class="ml-16 flex items-baseline pb-6 sm:pb-7">
+        <div class="absolute inset-x-0 bottom-0 bg-gray-50 px-4 py-4 sm:px-6">
+          <div class="text-sm">
+            <a href="#information" hx-get="information?device={{device}}" hx-target="#more-information" hx-swap="innerHTML" 
+              class="font-medium text-indigo-600 hover:text-indigo-500"> 자세히 보기<span class="sr-only"> </span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="relative overflow-hidden rounded-lg bg-white px-4 pb-12 pt-5 shadow sm:px-6 sm:pt-6">
+      <dt class="truncate text-sm font-medium text-gray-500">동작</dt>
+    {% if device == 'upper' %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">확장, 굴곡</dd>
+    {% else %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">7m 걷기</dd>
+    {% endif %}
+      <div class="ml-16 flex items-baseline pb-6 sm:pb-7">
+        <div class="absolute inset-x-0 bottom-0 bg-gray-50 px-4 py-4 sm:px-6">
+          <div class="text-sm">
+    {% if device == 'upper' %}
+            <a href="#information" hx-get="information?task=arm" hx-target="#more-information" hx-swap="innerHTML" class="font-medium text-indigo-600 hover:text-indigo-500"> 자세히 보기<span class="sr-only"> </span>
+    {% else %}
+            <a href="#information" hx-get="information?task=gait" hx-target="#more-information" hx-swap="innerHTML" class="font-medium text-indigo-600 hover:text-indigo-500"> 자세히 보기<span class="sr-only"> </span>
+    {% endif %}
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </dl>
+</div>
+
+<div class="md:flex md:justify-center mx-auto my-4 items-center">
+  <div>
+    {% if device == 'upper' %}
+    <form hx-get="score/usability?device=upper&age={{age}}" hx-target="#usability-result" hx-swap="innerHTML" hx-indicator="#submit-spinner">
+    {% else %}
+    <form hx-get="score/usability?device=lower&age={{age}}" hx-target="#usability-result" hx-swap="innerHTML" hx-indicator="#submit-spinner">
+    {% endif %}
+      <img id="submit-spinner" class="htmx-indicator" src="https://htmx.org/img/bars.svg"/>
+      <button class="relative inline-flex items-center gap-x-1.5 rounded-md bg-blue-600 px-4 py-3 md:px-8 md:py-6 text-lg
+                     font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2
+                     focus-visible:outline-offset-2 focus-visible:outline-blue-600" id="usability-submit" type="submit" >평가 시작</button>
+    </form>
   </div>
 </div>
-<div id="btn-more" class="d-grid gap-2 col-3 mx-auto">
-  <button class="btn btn-primary" hx-get="/usability" hx-target="#usability-result" hx-swap="innerHTML"
-    hx-on::after-request="document.getElementById('usability-result-fig').style.display='block'" hx-indicator="#spinner">시작</button>
 </div>
-<div id="usability-result">
+
+<!-- 평가 결과 -->
+<div class="py-10">
+<h3 class="text-base font-semibold leading-6 text-gray-900">평가 결과</h3>
+<div id="usability-result"></div>
 </div>
-<img id="usability-result-fig" src="fig" style="display: none"/>
+
+<!-- 자세히 보기 -->
+<div id="more-information"></div>
+
 {% endblock %}
