--- a/web/templates/layouts/default.html
+++ b/web/templates/layouts/default.html
@@ -1,85 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-full">
   <head>
     <meta charset="UTF-8" />
     <title>Wearable Device Evaluation</title>
-    <!-- CSS only -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
   </head>
   <style>
     .card-img-top {
-      width: 25%;
-      align-self: center;
+	width: 25%;
+	align-self: center;
     }
     #txtSearch {
-      min-width: 400px;
+	min-width: 400px;
     }
   </style>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="/">Wearable Device Evaluation</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">홈</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/usability">사용성</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/wearability">착용성</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/interactivity">상호작용성</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/visualization">시각화</a>
-            </li>
-          </ul>
-          <!--
-      <form class="d-flex">
-        <input id="txtSearch" class="form-control me-2" type="search" name="query"
-               placeholder="Search Beer..." aria-label="Search Beer"
-               hx-post="/search"
-               hx-trigger="keyup changed delay:500ms"
-               hx-target="#search-results"
-               _="on htmx:afterOnLoad add .show to #search-results">
-        <ul id="search-results" class="dropdown-menu mt-5">
-        </ul>
-      </form>
-      -->
-        </div>
+  <body class="h-full">  
+
+    <div class="min-h-full">
+      
+      <nav class="bg-white shadow">
+	<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+	  <div class="flex h-16 justify-between">
+	    <div class="flex">
+              <div class="-ml-2 mr-2 flex items-center md:hidden">
+		<!-- Mobile menu button -->
+		<button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-controls="mobile-menu" aria-expanded="false">
+		  <span class="absolute -inset-0.5"></span>
+		  <span class="sr-only">Open main menu</span>
+		  <!--
+		      Icon when menu is closed.
+
+		      Menu open: "hidden", Menu closed: "block"
+		    -->
+		  <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+		    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+		  </svg>
+		  <!--
+		      Icon when menu is open.
+
+		      Menu open: "block", Menu closed: "hidden"
+		    -->
+		  <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+		    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+		  </svg>
+		</button>
+              </div>
+              <div class="flex flex-shrink-0 items-center">
+		<img class="h-8 w-auto" src="https://i.imgur.com/nYA6oUS.png" alt="웨어러블 디바이스 평가 시스템">
+              </div>
+              <div class="hidden md:ml-6 md:flex md:space-x-8">
+		<!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
+		<a href="/" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">평가시스템 소개</a>	  
+    <a href="/usability{{url}}" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900">사용성</a>
+    <a href="/wearability{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">착용성</a>
+    <a href="/interactivity{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">상호작용성</a>
+    <a href="/visualization{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">시각화</a>	  
+              </div>
+	    </div>
+	    <div class="flex items-center">
+              <div class="flex-shrink-0">
+		<button type="button" class="relative inline-flex items-center gap-x-1.5 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+		  <svg class="-ml-0.5 h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+		    <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
+		  </svg>
+		  New Simulation!
+		</button>
+              </div>
+	    </div>
+	  </div>
+	</div>
+      </nav>
+
+      <div class="py-10 space-y-10">
+	<header>
+	  <div class="flex justify-center">
+	  <div class="mx-auto max-w-7xl">
+	    <h1 class="text-center text-3xl font-bold leading-tight tracking-tight text-gray-900">사용성 평가</h1>
+	    <div class="col-lg-6 mx-auto">
+	      <p class="text-center lead mb-4">웨어러블 디바이스의 사용성 평가</p>
+	    </div>	
+	  </div>
+	  </div>
+	</header>
+	<main>
+	  <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
+	    {% block content %} {% endblock %}
+          </div>
+	</main>
+
+	<footer>
+	  <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+	    <div class="border-t border-gray-200 py-8 text-center text-sm text-gray-500 sm:text-left"><span class="block sm:inline">&copy; 2023 ETRI 모빌리티 UX 연구소</span></div>
+	  </div>
+	</footer>
       </div>
-    </nav>
-    <div class="container my-4">{% block content %} {% endblock %}</div>
-    <footer class="footer mt-auto py-3 bg-light">
-      <div class="container">
-        <span class="text-dark"> ©2023 ETRI 모빌리티UX연구실 </span>
-      </div>
-    </footer>
-    <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/hyperscript.org@0.8.0"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-      integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-      crossorigin="anonymous"
-    ></script>
+      <script src="https://unpkg.com/htmx.org@1.9.7"></script>
+      <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+	  <script src="https://cdn.tailwindcss.com"></script>
   </body>
 </html>
