--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -71,7 +71,8 @@
       <img id="submit-spinner" class="htmx-indicator" src="https://htmx.org/img/bars.svg"/>
       <button class="relative inline-flex items-center gap-x-1.5 rounded-md bg-blue-600 px-4 py-3 md:px-8 md:py-6 text-lg
                      font-semibold text-white shadow-sm hover:bg-blue-500 focus-visible:outline focus-visible:outline-2
-                     focus-visible:outline-offset-2 focus-visible:outline-blue-600" id="usability-submit" type="submit" >평가 시작</button>
+                     focus-visible:outline-offset-2 focus-visible:outline-blue-600" id="usability-submit"
+                     type="submit" >평가 결과보기</button>
     </form>
   </div>
 </div>
