Add error rate from control code

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -58,6 +58,25 @@
         </div>
       </div>
     </div>
+
+    <div class="relative overflow-hidden rounded-lg bg-white px-4 pb-12 pt-5 shadow sm:px-6 sm:pt-6">
+      <dt class="truncate text-sm font-medium text-gray-500">에러율</dt>
+    {% if code == 'code1' %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">10%</dd>
+    {% elif code =='code2' %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">35%</dd>
+    {% elif code =='code3' %}
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900">80%</dd>
+    {% endif %}
+      <div class="ml-16 flex items-baseline pb-6 sm:pb-7">
+        <div class="absolute inset-x-0 bottom-0 bg-gray-50 px-4 py-4 sm:px-6">
+          <div class="text-sm">
+            <a href="#information" hx-get="information?code=code1" hx-target="#more-information" hx-swap="innerHTML" class="font-medium text-indigo-600 hover:text-indigo-500"> 자세히 보기<span class="sr-only"> </span></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </dl>
 </div>
 
