--- a/web/templates/information.html
+++ b/web/templates/information.html
@@ -61,6 +61,11 @@
                 <img src="https://i.imgur.com/GYflAqp.png">
               {% endif %}
 
+              {% if code == 'code1' %}
+                에러율에 대한 설명 추가 <br/>
+                그리고 현재 선택한 코드가 에러율에 대한 설명 추가
+              {% endif %}
+   
             </div>
           </div>
         </div>
