--- a/web/templates/layouts/default.html
+++ b/web/templates/layouts/default.html
@@ -1,104 +1,26 @@
-<!DOCTYPE html>
+<!doctype html>
 <html class="h-full">
   <head>
     <meta charset="UTF-8" />
     <title>Wearable Device Evaluation</title>
+    <script src="https://unpkg.com/htmx.org@1.9.7"></script>
+    <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
+    <link rel="stylesheet" href="/static/output.css">
   </head>
-  <style>
-    .card-img-top {
-	width: 25%;
-	align-self: center;
-    }
-    #txtSearch {
-	min-width: 400px;
-    }
-  </style>
-  <body class="h-full">  
-
+  <style></style>
+  <body class="h-full">
     <div class="min-h-full">
-      
-      <nav class="bg-white shadow">
-	<div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-	  <div class="flex h-16 justify-between">
-	    <div class="flex">
-              <div class="-ml-2 mr-2 flex items-center md:hidden">
-		<!-- Mobile menu button -->
-		<button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-100 hover:text-gray-500 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500" aria-controls="mobile-menu" aria-expanded="false">
-		  <span class="absolute -inset-0.5"></span>
-		  <span class="sr-only">Open main menu</span>
-		  <!--
-		      Icon when menu is closed.
-
-		      Menu open: "hidden", Menu closed: "block"
-		    -->
-		  <svg class="block h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-		    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-		  </svg>
-		  <!--
-		      Icon when menu is open.
-
-		      Menu open: "block", Menu closed: "hidden"
-		    -->
-		  <svg class="hidden h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
-		    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
-		  </svg>
-		</button>
-              </div>
-              <div class="flex flex-shrink-0 items-center">
-		<img class="h-8 w-auto" src="https://i.imgur.com/nYA6oUS.png" alt="웨어러블 디바이스 평가 시스템">
-              </div>
-              <div class="hidden md:ml-6 md:flex md:space-x-8">
-		<!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
-		<a href="/" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">소개</a>	  
-    <a href="/usability{{url}}" class="inline-flex items-center border-b-2 border-indigo-500 px-1 pt-1 text-sm font-medium text-gray-900">사용성</a>
-    <a href="/wearability{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">착용성</a>
-    <a href="/interactivity{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">상호작용성</a>
-    <a href="/visualization{{url}}" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">시각화</a>	  
-    <a href="/results" class="inline-flex items-center border-b-2 border-transparent px-1 pt-1 text-sm font-medium text-gray-500 hover:border-gray-300 hover:text-gray-700">평가 이력</a>	  
-              </div>
-	    </div>
-	    <div class="flex items-center">
-              <div class="flex-shrink-0">
-              <a href="/new">
-            		<button type="button" class="relative inline-flex items-center gap-x-1.5 rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
-		              <svg class="-ml-0.5 h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-		               <path d="M10.75 4.75a.75.75 0 00-1.5 0v4.5h-4.5a.75.75 0 000 1.5h4.5v4.5a.75.75 0 001.5 0v-4.5h4.5a.75.75 0 000-1.5h-4.5v-4.5z" />
-		              </svg>
-                  새 평가 시작
-		              </button>
-                </a>
-  
-              </div>
-	    </div>
-	  </div>
-	</div>
-      </nav>
-
+      {% include "layouts/nav.html" %}
       <div class="py-10 space-y-10">
-	<header>
-	  <div class="flex justify-center">
-	  <div class="mx-auto max-w-7xl">
-	    <h1 class="text-center text-3xl font-bold leading-tight tracking-tight text-gray-900">사용성 평가</h1>
-	    <div class="col-lg-6 mx-auto">
-	      <p class="text-center lead mb-4">웨어러블 디바이스의 사용성 평가</p>
-	    </div>	
-	  </div>
-	  </div>
-	</header>
-	<main>
-	  <div class="mx-auto max-w-7xl sm:px-6 lg:px-8">
-	    {% block content %} {% endblock %}
-          </div>
-	</main>
+        <!-- header -->
+        {% block header %} {% include "layouts/header.html" %} {% endblock %}
 
-	<footer>
-	  <div class="mx-auto max-w-3xl px-4 sm:px-6 lg:max-w-7xl lg:px-8">
-	    <div class="border-t border-gray-200 py-8 text-center text-sm text-gray-500 sm:text-left"><span class="block sm:inline">&copy; 2023 ETRI 모빌리티 UX 연구소</span></div>
-	  </div>
-	</footer>
+        <!-- content -->
+        {% block content %} {% endblock %}
+
+        <!-- footer -->
+        {% include "layouts/footer.html" %}
       </div>
-      <script src="https://unpkg.com/htmx.org@1.9.7"></script>
-      <script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
-	  <script src="https://cdn.tailwindcss.com"></script>
+    </div>
   </body>
 </html>
